--- a/style.css
+++ b/style.css
@@ -17,15 +17,97 @@ h1 {
     text-align: center;
 }
 
-h2 {
-    color: #f9f9f9;
-    margin-bottom: 10px;
-}
 
 p {
     margin-bottom: 16px;
     line-height: 1.5;
 }
+
+.main-visual {
+    width: 100%;
+    height: 500px;
+    background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
+    background-size: cover;
+    margin-bottom: 32px;
+    position: relative;
+    /*position: absolute;*/
+    /*padding-top: 60px;*/
+}
+
+#container {
+
+    /*position: relative;*/
+}
+
+#header {
+    width: 100%;
+    overflow: hidden;
+    background: #00000000;
+    padding: 6px 0px;
+    position: absolute;
+    top: 0px;
+
+}
+
+.logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+}
+
+
+h2 {
+    color: #f9f9f9;
+    margin-bottom: 10px;
+    text-align: center;
+}
+/*
+h2.we {
+    position: absolute;
+    top: 65%;
+    text-align: center;
+}
+*/
+nav {
+    overflow: hidden;
+    z-index: 2;
+}
+
+nav li {
+    list-style-type: none;
+    float: left;
+    margin-top: 2px;
+}
+
+/*
+nav h1{
+    font-size: 32px;
+    padding: 8px 16px;
+    color: #f9f9f9;
+    text-shadow: 1px 1px 1px #000;
+}
+*/
+nav a {
+    font-size: 16px;
+    display: block;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: #f9f9f9;
+    margin: 14px 16px 0px;
+    transition: 0.3s;
+}
+
+nav a:hover {
+    border-bottom: 3px solid #f9f9f9;
+}
+
+/*
+img {
+    float: left;
+}
+*/
 
 a.fbbutton1 {
     margin-top: 16px;
@@ -63,33 +145,6 @@ a.fbbuttopn2:hover {
 .container {
     width: 640px;
     margin: 0 auto;
-
-}
-
-#container {
-
-    position: relative;
-}
-
-#header {
-    width: 100%;
-    overflow: hidden;
-    background: #00000000;
-    padding: 6px 0px;
-    position: absolute;
-    top: 0px;
-
-}
-
-.logo {
-    position: absolute;
-    top: 35%;
-}
-
-h2.we {
-    position: absolute;
-    top: 65%;
-
 }
 
 /*
@@ -99,43 +154,6 @@ h2.we {
     margin-right: 48px;
 }*/
 
-nav {
-    overflow: hidden;
-    z-index: 2;
-}
-
-nav li {
-    list-style-type: none;
-    float: left;
-    margin-top: 2px;
-}
-
-/*
-nav h1{
-    font-size: 32px;
-    padding: 8px 16px;
-    color: #f9f9f9;
-    text-shadow: 1px 1px 1px #000;
-}
-*/
-nav a {
-    font-size: 16px;
-    display: block;
-    text-decoration: none;
-    padding: 8px 16px;
-    color: #f9f9f9;
-    margin: 14px 16px 0px;
-    transition: 0.3s;
-}
-
-nav a:hover {
-    border-bottom: 3px solid #f9f9f9;
-}
-
-
-img {
-    float: left;
-}
 
 .content {
     border-bottom: 1px solid #eee;
@@ -177,30 +195,62 @@ img {
     border-bottom: 0;
 }
 
+.courses{
+    margin-top: 60px;
+}
 
 #course{
-    float: left;
-    width: 15%;
+    
+    width: 200px;
+    height: 330px;
     margin: 0px 12px;
+    margin-top: 100px;
+    margin-bottom: 20px;
     background: #fff;
     padding: 8px;
 }
 
 #course img{
-    
-    margin-bottom: 16px;
     margin: 0 auto;
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
+/*
 .cimg{
     margin-bottom: 16px;
     margin: 0 auto;
-}
+}*/
 
 #course p{
     font-size: 15px;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
+.cbutton {
+    
+    margin-top: 50px;
+    font-size: 13px;
+    width: 130px;
+    padding: 13px 30px;
+    
+    color: #f9f9f9;
+    /*border: 1px solid #000;*/
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
+    margin: 0 auto;
+    display: block;
+   
+}
+
+#html{
+    background: #FF4400;
+}
+#css{
+    background: #FF4400;
+}
 
 
 /*
@@ -208,16 +258,6 @@ img {
     font-size: 16px;
 }
 */
-.main-visual {
-    width: 100%;
-    height: 500px;
-    background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
-    background-size: cover;
-    margin-bottom: 32px;
-
-    /*position: absolute;*/
-    /*padding-top: 60px;*/
-}
 
 /*
 p.new{
