--- a/style.css
+++ b/style.css
@@ -196,9 +196,14 @@ a.fbbuttopn2:hover {
 }
 
 .courses{
-    margin-top: 60px;
+    margin-top: 40px;
+    
 }
 
+.courses h1{
+    margin-bottom: 60px;
+}
+/*
 #course{
     
     width: 200px;
@@ -208,13 +213,44 @@ a.fbbuttopn2:hover {
     margin-bottom: 20px;
     background: #fff;
     padding: 8px;
+}*/
+.htmlBox{
+   width: 960px;
+    height: 370px;
+    margin: 0px 12px;
+    margin-top: 100px;
+    /*margin-bottom: 20px;*/
+    background: #00000000;
+    padding: 8px;
+    margin: 0 auto;
 }
+.jsBox{
+   width: 720px;
+    height: 370px;
+    margin: 0px 12px;
+    margin-top: 100px;
+    /*margin-bottom: 20px;*/
+    background: #00000000;
+    padding: 8px;
+    margin: 0 auto;
+}
+.html{
+   width: 200px;
+    height: 330px;
+    margin: 0px 12px;
+    /*margin-top: 100px;*/
+    margin-bottom: 20px;
+    background: #fff;
+    padding: 8px;
+    float: left;
+}
+
 
 #course img{
     margin: 0 auto;
     display: block;
     margin-top: 30px;
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
 }
 /*
 .cimg{
@@ -222,15 +258,16 @@ a.fbbuttopn2:hover {
     margin: 0 auto;
 }*/
 
+
 #course p{
     font-size: 15px;
-    margin-bottom: 20px;
+    top: 300px;
+    margin-bottom: 10px;
     text-align: center;
 }
 
 .cbutton {
     
-    margin-top: 50px;
     font-size: 13px;
     width: 130px;
     padding: 13px 30px;
@@ -242,16 +279,32 @@ a.fbbuttopn2:hover {
     text-decoration: none;
     margin: 0 auto;
     display: block;
-   
+    /*margin-bottom: 20px;*/
 }
 
 #html{
     background: #FF4400;
 }
 #css{
-    background: #FF4400;
+    background: #00BFFF;
 }
 
+#unity{
+    background: #333333;
+}
+
+#ruby{
+    background: #FF4F50;
+}
+#js{
+    background: #FFCC00;
+}
+#swift{
+    background: #FF9900;
+}
+#go{
+    background: #66CCCC;
+}
 
 /*
 #course p{
