--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-
-    font-family: 'Roboto', sans-serif;
-
 }
+
+@font-face {
+    font-family: 'TopFont';
+    src: url(/fonts/Futura-Med.ttf);
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url(/fonts/Futura-MedObl.ttf);
+}
+
 
 body {
     width: 100%;
@@ -12,7 +19,9 @@ body {
 }
 
 h1 {
-    color: #00F;
+    font-family: TopFont;
+    font-size: 50px;
+    color: #3D5CDB;
     margin-bottom: 10px;
     text-align: center;
 }
@@ -21,6 +30,7 @@ h1 {
 p {
     margin-bottom: 16px;
     line-height: 1.5;
+    font-family: "ヒラギノ角ゴ Pro W3", sans-serif;
 }
 
 .main-visual {
@@ -40,16 +50,18 @@ p {
 }
 
 #header {
-    width: 100%;
+    width: 1400px;
     overflow: hidden;
     background: #00000000;
     padding: 6px 0px;
     position: absolute;
     top: 0px;
-
+    
 }
 
 .logo {
+    font-family: MainFont;
+    font-size: 25px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -72,7 +84,7 @@ h2.we {
 }
 */
 nav {
-    
+    float: right;
     overflow: hidden;
     z-index: 2;
 }
@@ -93,7 +105,9 @@ nav h1{
 }
 */
 nav a {
-    font-size: 16px;
+    
+    font-size: 30px;
+    font-family: TopFont;
     display: block;
     text-decoration: none;
     padding: 8px 16px;
@@ -112,21 +126,22 @@ img {
 }
 */
 .container {
-    width: 100%;
-   
+    width: 1500px;
     margin: 0 auto;
+     display: block;
 }
 
 #main {
     overflow: hidden;
     background: #fff;
-    width: 100%;
+    width: 1500px;
     /*padding: 16px;*/
     padding-top: 50px;
+    margin: 0 auto;
+     display: block;
+    
     /*float: left;*/
 }
-
-
 
 .container img{
     float: left;
@@ -136,6 +151,7 @@ img {
     float: left;
     width: 410px;
     margin-left: 18px;
+    
 }
 
 .left-box {
@@ -150,23 +166,25 @@ img {
 
 a.fbbutton1 {
     margin-top: 16px;
+    font-family: "ヒラギノ角ゴ Pro W3", sans-serif;
     font-size: 16px;
     padding: 8px 32px;
-    background: #00F;
+    background: #3D5CDB;
     color: #f9f9f9;
     /*border: 1px solid #000;*/
-    border-radius: 10px;
+    border-radius: 12px;
     text-decoration: none;
 }
 
 a.fbbutton2 {
     margin-top: 16px;
+    font-family: 'ヒラギノ角ゴ Pro W3', sans-serif;
     font-size: 16px;
     padding: 8px 32px;
-    background: #FFCC00;
+    background: #FFBF00;
     color: #f9f9f9;
     /*border: 1px solid #000;*/
-    border-radius: 10px;
+    border-radius: 12px;
     text-decoration: none;
 }
 
@@ -193,6 +211,10 @@ a.fbbuttopn2:hover {
     border-bottom: 1px solid #eee;
     padding: 16px 0;
     overflow: hidden;
+    width: 1000px;
+    margin: 0 auto;
+    display: block;
+ 
     /*
     width 100px;
     background: #000000;*/
@@ -263,6 +285,7 @@ a.fbbuttopn2:hover {
     margin-bottom: 20px;
     background: #fff;
     padding: 8px;
+    position:relative;
     float: left;
 }
 
@@ -281,12 +304,7 @@ a.fbbuttopn2:hover {
 }*/
 
 
-#course p {
-    font-size: 15px;
-    top: 300px;
-    margin-bottom: 10px;
-    text-align: center;
-}
+
 
 .cbutton {
 
@@ -296,12 +314,31 @@ a.fbbuttopn2:hover {
 
     color: #f9f9f9;
     /*border: 1px solid #000;*/
-    text-align: center;
+    
     border-radius: 10px;
     text-decoration: none;
-    margin: 0 auto;
-    display: block;
+    
+    position:absolute;
+    bottom:30px;
+    text-align: center;
+    
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
     /*margin-bottom: 20px;*/
+}
+
+#course p {
+    font-size: 15px;
+   width: 150px;
+   text-align: center;
+    position:absolute;
+    bottom:95px;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    /*bottom:100px;*/
+    
 }
 
 #html {
@@ -338,8 +375,9 @@ a.fbbuttopn2:hover {
 }
 
 footer {
+    font-family: TopFont;
     text-align: center;
-    color: #00F;
+    color: #3D5CDB;
     margin-top: 70px;
     margin-bottom: 20px;
 }
