--- a/style.css
+++ b/style.css
@@ -34,30 +34,34 @@ p {
     font-family: "ヒラギノ角ゴ Pro W3", sans-serif;
 }
 
+.bg-slider {
+    width: 100vw;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 0;
+}
+
 .main-visual {
     width: 100%;
-    height: 500px;
-    background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
-    background-size: cover;
+    /*height: 500px;*/
+    /*background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
+    background-size: cover;*/
     /*margin-bottom: 32px;*/
     position: relative;
+
     /*position: absolute;*/
     /*padding-top: 60px;*/
 }
 
+
 #container {
 
     /*position: relative;*/
-}
-
-#header {
-    width: 1400px;
-    overflow: hidden;
-    background: #00000000;
-    padding: 6px 0px;
-    position: absolute;
-    top: 0px;
-
 }
 
 .logo {
@@ -70,23 +74,22 @@ p {
     -webkit- transform: translateY(-50%) translateX(-50%);
 }
 
-
-h2 {
-    color: #f9f9f9;
-    margin-bottom: 10px;
-    text-align: center;
+#header {
+    width: 1400px;
+    overflow: hidden;
+    background: #00000000;
+    padding: 6px 0px;
+    position: relative;
+    
+    z-index: 2;
+    float: right;
+    
 }
 
-/*
-h2.we {
-    position: absolute;
-    top: 65%;
-    text-align: center;
-}
-*/
 nav {
     float: right;
     overflow: hidden;
+    top: 0px;
     z-index: 2;
 }
 
@@ -118,8 +121,26 @@ nav a {
 }
 
 nav a:hover {
-    border-bottom: 3px solid #f9f9f9;
+    /*border-bottom: 3px solid #f9f9f9;*/
+    color: #3D5CDB;
 }
+
+
+
+h2 {
+    color: #f9f9f9;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/*
+h2.we {
+    position: absolute;
+    top: 65%;
+    text-align: center;
+}
+*/
+
 
 /*
 img {
@@ -137,7 +158,7 @@ img {
     overflow: hidden;
     background: #fff;
     width: 1500px;
-  
+
     /*padding: 16px;*/
     padding-top: 50px;
     margin: 0 auto;
@@ -192,14 +213,12 @@ a.fbbutton2 {
     text-decoration: none;
 }
 
-a.fbbuttopn1:hover {
-    background: #f9f9f9;
-    color: #3b5998;
+a.fbbutton1:hover {
+    box-shadow: 0 0 10px gray;
 }
 
-a.fbbuttopn2:hover {
-    background: #f9f9f9;
-    color: #3b5998;
+a.fbbutton2:hover {
+    box-shadow: 0 0 10px gray;
 }
 
 
@@ -245,14 +264,15 @@ a.fbbuttopn2:hover {
     background-color: rgba(186, 213, 245, 0.7);
     position: relative;
 }
-#courses{
+
+#courses {
     position: absolute;
     margin: 0 auto;
 }
 
 .courses {
     margin-top: 40px;
-    
+
 }
 
 
@@ -344,6 +364,10 @@ a.fbbuttopn2:hover {
     /*margin-bottom: 20px;*/
 }
 
+.cbutton:hover {
+    box-shadow: 0 0 8px gray;
+}
+
 #course p {
     font-size: 15px;
     width: 150px;
@@ -396,7 +420,7 @@ a.fbbuttopn2:hover {
     width: 100%;
 }
 
-#images{
+#images {
     margin-bottom: 100px;
 }
 
