--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p {
 
 .main-visual {
     width: 100%;
+    height:100vh;
     /*height: 500px;*/
     /*background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
     background-size: cover;*/
@@ -80,10 +81,10 @@ p {
     background: #00000000;
     padding: 6px 0px;
     position: relative;
-    
+
     z-index: 2;
     float: right;
-    
+
 }
 
 nav {
@@ -174,15 +175,16 @@ img {
 .right-box {
     float: left;
     width: 410px;
-    margin-left: 18px;
-
+    margin-left: 90px;
+    margin-top: 20px;
 }
 
 .left-box {
     float: left;
     width: 410px;
-    margin-right: 18px;
+    margin-right: 90px;
     margin-bottom: 150px;
+    margin-top: 20px;
 }
 
 .register {
@@ -231,8 +233,8 @@ a.fbbutton2:hover {
 
 
 .content {
-    border-bottom: 1px solid #eee;
-    padding: 16px 0;
+    /*border-bottom: 1px solid #eee;*/
+    padding: 40px 0;
     overflow: hidden;
     width: 1000px;
     margin: 0 auto;
@@ -263,10 +265,12 @@ a.fbbutton2:hover {
     width: 100%;
     background-color: rgba(186, 213, 245, 0.7);
     position: relative;
+    height: 1000px;
 }
 
 #courses {
-    position: absolute;
+    /*position: absolute;*/
+    position: relative;
     margin: 0 auto;
 }
 
@@ -275,6 +279,11 @@ a.fbbutton2:hover {
 
 }
 
+.courses-wrapper {
+    position: absolute;
+    top: 50px;
+    width: 100%;
+}
 
 .courses h1 {
     margin-bottom: 60px;
@@ -319,6 +328,7 @@ a.fbbutton2:hover {
     margin: 0px 12px;
     /*margin-top: 100px;*/
     margin-bottom: 20px;
+    border-radius: 12px;
     background: #fff;
     padding: 8px;
     position: relative;
@@ -435,6 +445,12 @@ footer {
     color: #3D5CDB;
     margin-top: 70px;
     margin-bottom: 20px;
+}
+
+.fadein {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 1s;
 }
 
 /*
