--- a/mobile.css
+++ b/mobile.css
@@ -151,7 +151,7 @@ img {
 }
 */
 .container {
-    width: 1500px;
+    width: 100%;
 
     margin: 0 auto;
     display: block;
@@ -160,7 +160,7 @@ img {
 #main {
     overflow: hidden;
     background: #fff;
-    width: 1500px;
+    width: 100%;
 
     /*padding: 16px;*/
     padding-top: 50px;
@@ -170,23 +170,44 @@ img {
     /*float: left;*/
 }
 
+.content {
+    /*border-bottom: 1px solid #eee;*/
+    padding: 40px 0;
+    overflow: hidden;
+    width: 100%;
+    
+    margin: 0 auto;
+    display: block;
+
+    /*
+    width 100px;
+    background: #000000;*/
+}
+
+
 .container img {
-    float: left;
+    
+    margin: 0 auto;
+    display: block;
 }
 
 .right-box {
-    /*float: left;*/
+    float: none;
     width: 410px;
     margin-left: 90px;
     margin-top: 20px;
+    padding-top: 50px;
+    margin: 0 auto;
 }
 
 .left-box {
-    /*float: left;*/
+    float: none;
     width: 410px;
     margin-right: 90px;
     margin-bottom: 150px;
     margin-top: 20px;
+    padding-top: 50px;
+    margin: 0 auto;
 }
 
 .register {
@@ -234,18 +255,6 @@ a.fbbutton2:hover {
 }*/
 
 
-.content {
-    /*border-bottom: 1px solid #eee;*/
-    padding: 40px 0;
-    overflow: hidden;
-    width: 1000px;
-    margin: 0 auto;
-    display: block;
-
-    /*
-    width 100px;
-    background: #000000;*/
-}
 
 .top-title {
     font: 36px;
@@ -267,7 +276,7 @@ a.fbbutton2:hover {
     width: 100%;
     background-color: rgba(186, 213, 245, 0.7);
     position: relative;
-    height: 1000px;
+    height: 1700px;
 }
 
 #courses {
@@ -302,27 +311,59 @@ a.fbbutton2:hover {
     background: #fff;
     padding: 8px;
 }*/
+
 .htmlBox {
+    /*
     width: 960px;
     height: 370px;
     margin: 0px 12px;
     margin-top: 100px;
-    /*margin-bottom: 20px;*/
+    
     background: #00000000;
     padding: 8px;
     margin: 0 auto;
+    */
+    width: 100%;
 }
+    
 
 .jsBox {
+    /*
     width: 720px;
     height: 370px;
     margin: 0px 12px;
+    margin-top: 100px;
+   
+    background: #00000000;
+    padding: 8px;
+    margin: 0 auto;
+    */
+    width: 100%;
+}
+
+.mobileBox1 {
+    width: 480px;
+    height: 370px;
+    /*margin: 0px 12px;*/
     margin-top: 100px;
     /*margin-bottom: 20px;*/
     background: #00000000;
     padding: 8px;
     margin: 0 auto;
+    display: block;
 }
+.mobileBox2 {
+    width: 240px;
+    height: 370px;
+    /*margin: 0px 12px;*/
+    margin-top: 100px;
+    /*margin-bottom: 20px;*/
+    background: #00000000;
+    padding: 8px;
+    margin: 0 auto;
+    display: block;
+}
+
 
 .html {
     width: 200px;
