--- a/mobile.css
+++ b/mobile.css
@@ -352,7 +352,7 @@ a.fbbutton2:hover {
     /*margin: 0px 12px;*/
     margin-top: 100px;
     /*margin-bottom: 20px;*/
-    background: #00000000;
+    background: #000000;
     padding: 8px;
     margin: 0 auto;
     display: block;
@@ -363,7 +363,7 @@ a.fbbutton2:hover {
     /*margin: 0px 12px;*/
     margin-top: 100px;
     /*margin-bottom: 20px;*/
-    background: #00000000;
+    background: #000000;
     padding: 8px;
     margin: 0 auto;
     display: block;
