--- a/mobile.css
+++ b/mobile.css
@@ -371,7 +371,7 @@ a.fbbutton2:hover {
 
 
 .html {
-    width: 200px;
+    width: 180px;
     height: 330px;
     margin: 0px 12px;
     /*margin-top: 100px;*/
@@ -483,6 +483,8 @@ a.fbbutton2:hover {
 }
 
 .courses iframe {
+    width: 400px;
+    height: 300px;
     margin: 0 auto;
     display: block;
 }
