--- a/mobile.css
+++ b/mobile.css
@@ -347,7 +347,7 @@ a.fbbutton2:hover {
 }
 
 .mobileBox1 {
-    width: 380px;
+    width: 360px;
     height: 370px;
     /*margin: 0px 12px;*/
     margin-top: 100px;
@@ -358,7 +358,7 @@ a.fbbutton2:hover {
     display: block;
 }
 .mobileBox2 {
-    width: 190px;
+    width: 180px;
     height: 370px;
     /*margin: 0px 12px;*/
     margin-top: 100px;
@@ -371,7 +371,7 @@ a.fbbutton2:hover {
 
 
 .html {
-    width: 150px;
+    width: 140px;
     height: 330px;
     margin: 0px 12px;
     /*margin-top: 100px;*/
@@ -483,7 +483,8 @@ a.fbbutton2:hover {
 }
 
 .courses iframe {
-    width: 360px;
+    /*width: 360px;*/
+    width: 100%;
     height: 300px;
     margin: 0 auto;
     display: block;
