--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
 
 .main-visual {
     width: 100%;
-    height:100vh;
+    height: 100vh;
     /*height: 500px;*/
     /*background: #fff url(images/introduction_002.jpg) 0 0 no-repeat;
     background-size: cover;*/
@@ -61,7 +61,7 @@ p {
 
 
 #container {
-
+    width: 100%;
     /*position: relative;*/
 }
 
@@ -74,6 +74,12 @@ p {
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
 }
+
+.logo img {
+
+    width: 800px;
+}
+
 
 #header {
     width: 1024px;
