--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ p {
     font-family: "ヒラギノ角ゴ Pro W3", sans-serif;
 }
 */
+
+
 .main-visual {
     width: 100%;
     /*height: 100vh;*/
@@ -34,11 +36,26 @@ p {
     background-size: cover;
    
     /*margin-bottom: 32px;*/
-    /*position: relative;*/
+    position: relative;
 
     /*position: absolute;*/
     /*padding-top: 60px;*/
 }
+
+.logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+}
+
+.logo img {
+    width: 325px;
+}
+
+
+
 
 .area {
     width: 100%;
@@ -103,642 +120,22 @@ p {
     /*margin-bottom: 56px;*/
 }
 
-/*
-.bg-slider {
-    width: 100vw;
-    height: 100vh;
-    background-position: center center;
-    background-size: cover;
+.pictures {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /*font-family: 'JTopFont';
+    color: #78422a;
+    font-size: 19px;*/
+    /*text-align: center;*/
     justify-content: center;
-    position: relative;
-    z-index: 0;
 }
 
-
-
-
-#container {
-    width: 100%;
-    
-}
-*/
-.logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    -webkit- transform: translateY(-50%) translateX(-50%);
-}
-
-.logo img {
-    width: 325px;
-}
-
-/*
-#header {
-    width: 1024px;
-    overflow: hidden;
-    background: #00000000;
-    padding: 6px 0px;
-    position: relative;
-
-    z-index: 2;
-    float: right;
-
-}
-
-nav {
-    float: right;
-    overflow: hidden;
-    top: 0px;
-    z-index: 2;
-}
-
-
-nav li {
-    list-style-type: none;
-    float: left;
-    margin-top: 2px;
-}
-*/
-/*
-nav h1{
-    font-size: 32px;
-    padding: 8px 16px;
-    color: #f9f9f9;
-    text-shadow: 1px 1px 1px #000;
-}
-*/
-/*
-nav a {
-
-    font-size: 30px;
-    font-family: TopFont;
-    display: block;
-    text-decoration: none;
-    padding: 8px 16px;
-    color: #f9f9f9;
-    margin: 14px 16px 0px;
-    transition: 0.3s;
-}
-
-nav a:hover {
-    
-    color: #3D5CDB;
-}
-
-
-
-h2 {
-    color: #f9f9f9;
-    margin-bottom: 10px;
-    text-align: center;
-}
-*/
-/*
-h2.we {
-    position: absolute;
-    top: 65%;
-    text-align: center;
-}
-*/
-
-
-/*
-img {
-    float: left;
-}
-*/
-/*
-.container {
-    
-    width: 100%;
-
-    margin: 0 auto;
-    display: block;
-}
-*/
-/*
-#main {
-    overflow: hidden;
-    background: #fff;
-   
-    width: 100%;
-
-    padding-top: 50px;
-    margin: 0 auto;
-    display: block;
-
-   
-}
-*/
-/*
-.container img {
-   
-}
-*/
-/*
-.right-box {
-    float: right;
-    width: 410px;
-    margin-left: 90px;
-    margin-top: 20px;
-}
-
-.left-box {
-    float: left;
-    width: 410px;
-    margin-right: 90px;
-    margin-bottom: 150px;
-    margin-top: 20px;
-}
-
-.register {
-    text-align: center;
-}
-
-a.fbbutton1 {
-    margin-top: 16px;
-    font-family: "ヒラギノ角ゴ Pro W3", sans-serif;
-    font-size: 16px;
-    padding: 8px 32px;
-    background: #3D5CDB;
-    color: #f9f9f9;
-  
-    border-radius: 12px;
-    text-decoration: none;
-}
-
-a.fbbutton2 {
-    margin-top: 16px;
-    font-family: 'ヒラギノ角ゴ Pro W3', sans-serif;
-    font-size: 16px;
-    padding: 8px 32px;
-    background: #FFBF00;
-    color: #f9f9f9;
-   
-    border-radius: 12px;
-    text-decoration: none;
-}
-
-a.fbbutton1:hover {
-    box-shadow: 0 0 10px gray;
-}
-
-a.fbbutton2:hover {
-    box-shadow: 0 0 10px gray;
-}
-*/
-
-/*
-#header h1{
-    float: left;
-    color: #f9f9f9;
-    margin-right: 48px;
-}*/
-
-/*
-.content {
-   
-    padding: 40px 0;
-    overflow: hidden;
-    width: 1000px;
-    margin: 0 auto;
-    display: block;
-
-}
-
-.top-title {
-    font: 36px;
-    padding-left: 8px;
-    margin-bottom: 16px;
-    color: #555;
-    font-weight: 400;
-    border-left: 6px solid #e63c35;
-}
-
-
-
-.content:last-child {
-    border-bottom: 0;
-}
-
-
-#particles-js {
-    width: 100%;
-    background-color: rgba(186, 213, 245, 0.7);
-    position: relative;
-    height: 1000px;
-}
-*/
-/*
-#courses {
-    
-    position: relative;
-    margin: 0 auto;
-}
-
-.courses {
-    margin-top: 40px;
-
-}
-
-.courses-wrapper {
-    position: absolute;
-    top: 50px;
-    width: 100%;
-}
-
-.courses h1 {
-    margin-bottom: 60px;
-}
-*/
-/*
-#course{
-    
-    width: 200px;
-    height: 330px;
-    margin: 0px 12px;
-    margin-top: 100px;
-    margin-bottom: 20px;
-    background: #fff;
-    padding: 8px;
-}*/
-/*
-.htmlBox {
-    width: 960px;
-    height: 370px;
-    margin: 0px 12px;
-    margin-top: 100px;
-    
-    background: #00000000;
-    padding: 8px;
-    margin: 0 auto;
-}
-
-.jsBox {
-    width: 720px;
-    height: 370px;
-    margin: 0px 12px;
-    margin-top: 100px;
-   
-    background: #00000000;
-    padding: 8px;
-    margin: 0 auto;
-}
-
-.html {
-    width: 200px;
-    height: 330px;
-    margin: 0px 12px;
-    
-    margin-bottom: 20px;
-    border-radius: 12px;
-    background: #fff;
-    padding: 8px;
-    position: relative;
-    float: left;
-}
-
-
-#course img {
-    margin: 0 auto;
-    display: block;
-    margin-top: 30px;
-    /*margin-bottom: 30px;*/
-}
-*/
-/*
-.cimg{
-    margin-bottom: 16px;
-    margin: 0 auto;
-}*/
-
-
-
-/*
-.cbutton {
-
-    font-size: 13px;
-    width: 130px;
-    padding: 13px 30px;
-
-    color: #f9f9f9;
-   
-    border-radius: 10px;
-    text-decoration: none;
-
-    position: absolute;
-    bottom: 30px;
-    text-align: center;
-
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    -webkit- transform: translateY(-50%) translateX(-50%);
-    
-}
-
-.cbutton:hover {
-    box-shadow: 0 0 8px gray;
-}
-
-#course p {
-    font-size: 15px;
-    width: 150px;
-    text-align: center;
-    position: absolute;
-    bottom: 95px;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    -webkit- transform: translateY(-50%) translateX(-50%);
-    
-
-}
-
-#html {
-    background: #FF4400;
-}
-
-#css {
-    background: #00BFFF;
-}
-
-#unity {
-    background: #333333;
-}
-
-#ruby {
-    background: #FF4F50;
-}
-
-#js {
-    background: #FFCC00;
-}
-
-#swift {
-    background: #FF9900;
-}
-
-#go {
-    background: #66CCCC;
-}
-*/
-/*imagesのスライドショー*/
-/*
-.slick-box {
-    margin: 0 auto;
-    width: 80%;
-}
-
-.slick-box img {
-    
-    width: 100%;
-}
-*/
-/*
-#images {
-    margin-bottom: 100px;
-}
-
-.courses iframe {
-    margin: 0 auto;
-    display: block;
-}
-
-footer {
-    font-family: TopFont;
-    text-align: center;
-    color: #3D5CDB;
-    margin-top: 70px;
-    margin-bottom: 20px;
-}
-
-.fadein {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: all 1s;
-}
-*/
-/*
-#course p{
-    font-size: 16px;
-}
-*/
-
-/*
-p.new{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: #e63c35;
-    color: white;
-    text-align: center;
-    line-height: 65px;
-    font-size: 25px;
-    position: absolute;
-    right: 16px;
-    top: 16px;
-}
-*/
-/*
-#contents1 {
-    position: relative;
+.photo {
+    /*width: 180px;
+    color: #78422a;*/
+    /*text-decoration: none;*/
+    /*border: 1px solid #78422a;*/
+    /*padding: 5px 0;*/
+    /*margin: 11px 16px;*/
 }
-*/
-/*
-.animation1{
-    position: relative;
-    width: 300px;
-    float: left;
-}
-
-#contents1 .animation1 .caption{
-    position: absolute;
-    padding: 20px;
-    background: #e63c35;
-    height: 362px;
-    width: 260px;
-    
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    
-    opacity: 0;
-}
-
-#contents1 .animation1 .caption h2{
-    color: white;
-    font-size: 13px;
-}
-
-#contents1 .animation1 .caption h3{
-    color: white;
-    font-size: 15px;
-}
-
-#contents1 .animation1:hover .caption{
-    -webkit-transform: translate(8px, 8px);
-    -ms-transform: translate(8px, 8px);
-    -o-transform: translate(8px, 8px);
-    transform: translate(8px, 8px);
-    
-    opacity: 1;
-}
-
-.animation2{
-    position: relative;
-    width: 300px;
-    float: left;
-    
-    -webkit-perspective: 500;
-    -moz-perspective: 500;
-    -ms-perspective: 500;
-    perspective: 500;
-    
-    -webkit-perspective-origin: left;
-    -moz-perspective-origin: left;
-    -ms-perspective-origin: left;
-    perspective-origin: left;
-}
-
-#contents2 .animation2 .caption{
-    position: absolute;
-    padding: 20px;
-    background: #e63c35;
-    height: 185px;
-    width: 100px;
-    
-    opacity: 0;
-    
-    -webkit-transform: rotateY(-90deg);
-    -ms-transform: rotateY(-90deg);
-    -o-transform: rotateY(-90deg);
-    transform: rotateY(-90deg);
-    
-    -webkit-transition: 0.4s, opacity 0.1s 0.3s;
-    -o-transition: 0.4s, opacity 0.1s 0.3s;
-    transition: 0.4s, opacity 0.1s 0.3s;
-    
-    -webkit-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -o-transform-origin: 0 0;
-    transform-origin: 0 0;
-}
-
-#contents2 .animation2 .caption h2{
-    color: white;
-    font-size: 13px;
-}
-
-#contents2 .animation2 .caption h3{
-    color: white;
-    font-size: 15px;
-}
-
-#contents2 .animation2:hover .caption{
-    opacity: 1;
-    
-    -webkit-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-    
-    -webkit-transition: 0.4s, opacity 0.1s;
-    -o-transition: 0.4s, opacity 0.1s;
-    transition: 0.4s, opacity 0.1s;
-}
-
-#contents2 .animation2:hover img{
-    -webkit-transform: translateX(25%);
-    -ms-transform: translateX(25%);
-    -o-transform: translateX(25%);
-    transform: translateX(25%);
-}
-
-#contents2 .animation2 img{
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-}
-*/
-/*
-#main a.fbbutton{
-    font-size: 16px;
-    color: #3B5998;
-    text-decoration: none;
-    letter-spacing: 3px;
-    padding: 10px 30px;
-    margin-left: 10px;
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    
-}
-
-
-
-.fbbutton .edge{
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: none repeat scroll 0 0 #3B5998;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-.fbbutton .edge1{
-    width: 1px;
-    -webkit-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    -o-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    transition-delay: 0.2s;
-}
-
-.fbbutton .edge2{
-    height: 1px;
-    -webkit-transform: translate3d(100%, 0, 0);
-    -ms-transform: translate3d(100%, 0, 0);
-    -o-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-}
-
-.fbbutton .edge3{
-    width: 1px;
-    left: auto;
-    right: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    -o-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    transition-delay: 0.2s;
-}
-
-.fbbutton .edge4{
-    height: 1px;
-    top: auto;
-    bottom: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    -ms-transform: translate3d(-100%, 0, 0);
-    -o-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-}
-
-a.fbbutton:hover .edge{
-    -webkit-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-}
-
-#main a.fbbutton:active{
-    background-color: #3B5998;
-    color: #fff;
-}*/
