--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p {
     height: 774px;
     background: #fff url(images/mainvisual1.png) 0 0 no-repeat;
     background-size: cover;
-   
+
     /*margin-bottom: 32px;*/
     position: relative;
 
@@ -73,6 +73,7 @@ p {
     text-align: center;
     margin-bottom: 56px;
 }
+
 /*
 .area h1 {
     margin-bottom: 56px;
@@ -137,5 +138,81 @@ p {
     /*text-decoration: none;*/
     /*border: 1px solid #78422a;*/
     /*padding: 5px 0;*/
-    /*margin: 11px 16px;*/
+    margin: 110px 16px;
+}
+
+.detail {}
+
+.detail p {}
+
+
+
+
+.green {
+    width: 100%;
+    /*height: 100vh;*/
+    height: 600px;
+    background: #fff url(images/sp_detail.png) 0 0 no-repeat;
+    background-size: cover;
+
+    /*margin-bottom: 32px;*/
+    position: relative;
+    padding-top: 80px;
+    padding-bottom: 60px;
+
+}
+
+.cream {
+    width: 100%;
+    height: 600px;
+    background: #f7f3e9;
+    padding-top: 80px;
+
+}
+
+.right {
+    width: 550px;
+    margin: 0 auto;
+
+}
+
+.left {
+    width: 550px;
+    margin: 0 auto;
+
+}
+
+.right-box {}
+
+.left-box {
+    float: left;
+
+    margin-right: 40px;
+    /*width: 200px;
+   margin-left: 400px;*/
+}
+
+
+h2 {
+    font-family: 'JTopFont';
+    font-size: 30px;
+    color: #c73c60;
+    padding-top: 60px;
+    margin-bottom: 30px;
+}
+
+p {
+    font-family: "游明朝", "YuMincho", serif;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    color: #78422a;
+}
+
+.detail a{
+    font-family: "游明朝", "YuMincho", serif;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    color: #78422a;
 }
