--- a/style.css
+++ b/style.css
@@ -164,9 +164,9 @@ p {
 
 .cream {
     width: 100%;
-    height: 600px;
+    height: 650px;
     background: #f7f3e9;
-    padding-top: 80px;
+    padding-top: 100px;
 
 }
 
@@ -195,7 +195,7 @@ p {
 
 h2 {
     font-family: 'JTopFont';
-    /*font-size: 30px;*/
+    font-size: 30px;
     color: #c73c60;
     padding-top: 60px;
     margin-bottom: 30px;
@@ -204,7 +204,7 @@ h2 {
 p {
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    /*font-size: 16px;*/
+    font-size: 16px;
     line-height: 30px;
     color: #78422a;
 }
