--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ p {
 }
 
 .logo img {
-    width: 325px;
+    width: 600px;
 }
 
 
@@ -59,15 +59,15 @@ p {
 
 .area {
     width: 100%;
-    height: 500px;
+    height: 700px;
     background: #f7f3e980;
-    padding-top: 36px;
+    padding-top: 50px;
 
 }
 
 .area h1 {
     font-family: ETopFont;
-    font-size: 60px;
+    font-size: 80px;
     color: #78422a;
     margin-bottom: 10px;
     text-align: center;
@@ -84,17 +84,17 @@ p {
     flex-wrap: wrap;
     font-family: 'JTopFont';
     color: #78422a;
-    font-size: 19px;
+    font-size: 25px;
     text-align: center;
     justify-content: center;
 }
 
 .item {
-    width: 180px;
+    width: 350px;
     color: #78422a;
     text-decoration: none;
     border: 1px solid #78422a;
-    padding: 5px 0;
+    padding: 10px 0px;
     margin: 11px 16px;
 }
 
@@ -187,7 +187,8 @@ p {
 .left-box {
     float: left;
     width: 35%;
-    margin-right: 8%;
+    margin-left: 10%;
+    /*margin-right: 8%;*/
     /*width: 200px;
    margin-left: 400px;*/
 }
@@ -195,7 +196,7 @@ p {
 
 h2 {
     font-family: 'JTopFont';
-    font-size: 30px;
+    font-size: 40px;
     color: #c73c60;
     padding-top: 60px;
     margin-bottom: 30px;
@@ -204,7 +205,7 @@ h2 {
 p {
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 30px;
     color: #78422a;
 }
@@ -212,7 +213,7 @@ p {
 .detail a{
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 30px;
     color: #78422a;
 }
