--- a/style.css
+++ b/style.css
@@ -188,7 +188,9 @@ p {
     float: left;
     width: 35%;
     margin-left: 10%;
-    /*margin-right: 8%;*/
+    margin-right: 8%;
+    transform: translateY(40%);
+    /*-webkit- transform: translateY(-50%);*/
     /*width: 200px;
    margin-left: 400px;*/
 }
@@ -196,17 +198,18 @@ p {
 
 h2 {
     font-family: 'JTopFont';
-    font-size: 45px;
+    font-size: 55px;
     color: #c73c60;
-    padding-top: 60px;
+    /*padding-top: 60px;*/
     margin-bottom: 30px;
+    
 }
 
 p {
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    font-size: 23px;
-    line-height: 30px;
+    font-size: 30px;
+    line-height: 40px;
     color: #78422a;
 }
 
