写真の重なり解消

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ p {
     /*text-decoration: none;*/
     /*border: 1px solid #78422a;*/
     /*padding: 5px 0;*/
+    width: 330px;
     margin: 110px 16px;
 }
 
