--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ p {
 /*エリアページ*/
 .area-top {
     width: 100%;
-    height: 1330px;
+    height: 4000px;
     background: #f7f3e9;
     top: 0px;
     /*padding-top: 36px;*/
@@ -130,6 +130,7 @@ p {
     font-size: 19px;*/
     /*text-align: center;*/
     justify-content: center;
+    
 }
 
 .photo {
@@ -139,7 +140,7 @@ p {
     /*border: 1px solid #78422a;*/
     /*padding: 5px 0;*/
     width: 330px;
-    margin: 110px 16px;
+    margin: 20px 16px;
 }
 
 .detail {}
@@ -165,10 +166,11 @@ p {
 
 .cream {
     width: 100%;
-    height: 650px;
+    height: 600px;
     background: #f7f3e9;
     /*padding-top: 100px;*/
     margin: 0 auto;
+    padding-bottom: 60px;
 }
 
 .right, .left {
@@ -185,17 +187,25 @@ p {
 .right-box, .left-box {
     width: 300px;
     float: left;
+    
 }
 
 .right iframe, .left iframe{
     float: left;
 }
 
+.right {
+    transform: translateY(5%) translateX(10%);
+   
+}
+
 .right-box{
-    margin-left: 50px;
+    margin-left: 10%;
+ 
 }
 .left-box{
-    margin-right: 50px;
+    margin-right: 10%;
+    padding-left: 10%;
 }
 
 /*
