--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ p {
 */
 
 h2 {
-    font-family: 'JTopFont';
+    font-family: 'ETopFont','JTopFont';
     font-size: 55px;
     color: #c73c60;
     /*padding-top: 60px;*/
@@ -259,4 +259,24 @@ p {
     font-size: 23px;
     line-height: 40px;
     color: #78422a;
+}
+
+.shopMap{
+    width: 100%;
+    /*height: 100vh;*/
+    height: 600px;
+    background: #fff url(images/sp_detail.png) 0 0 no-repeat;
+    background-size: cover;
+
+    /*margin-bottom: 32px;*/
+    position: relative;
+    /*padding-top: 80px;*/
+    padding-bottom: 60px;
+    
+}
+
+.shopMap iframe {
+    margin: 0 auto;
+    padding-top: 50px;
+    display: block;
 }
