--- a/style.css
+++ b/style.css
@@ -111,9 +111,10 @@ p {
 /*エリアページ*/
 .area-top {
     width: 100%;
-    height: 4000px;
+    /*height: 4000px;*/
     background: #f7f3e9;
     top: 0px;
+    padding-bottom: 200px;
     /*padding-top: 36px;*/
 
 }
@@ -136,7 +137,7 @@ p {
     font-size: 19px;*/
     /*text-align: center;*/
     justify-content: center;
-    
+    padding-top: 150px;
 }
 
 .photo {
@@ -145,9 +146,39 @@ p {
     /*text-decoration: none;*/
     /*border: 1px solid #78422a;*/
     /*padding: 5px 0;*/
-    width: 330px;
-    margin: 20px 16px;
+    width: 210px;
+    margin: 50px 70px;
+    /*margin: 0 auto;*/
+    /*margin: 20px 16px;*/
+    
 }
+
+
+
+.information{
+    width: 160px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.shoplink{
+    /*width: 210px;*/
+    color: #c73c60;
+    font-family: 'JTopFont';
+    text-decoration: none;
+    border: 2px solid #c73c60;
+    border-radius: 5px;
+    padding: 5px 20px;
+    text-align: center;
+   
+}
+
+.shoplink:hover{
+    color: #f7f3e9;
+    background: #c73c60;
+}
+
 
 .instahover:hover{
     box-shadow: 0 0 8px gray;
