--- a/style.css
+++ b/style.css
@@ -318,6 +318,12 @@ p {
 
 .shopMap iframe {
     margin: 0 auto;
-    padding-top: 50px;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    /*top: 500px;*/
+    /*padding-top: 50px;*/
     display: block;
 }
