--- a/pc.css
+++ b/pc.css
@@ -32,9 +32,8 @@ p {
     width: 100%;
     /*height: 100vh;*/
     height: 100vh;
-    background: #fff url(images/mainvisual1.png) 0 0 no-repeat;
+    background: #fff url(images/mainvisual_pc.png) 0 0 no-repeat;
     background-size: cover;
-
     /*margin-bottom: 32px;*/
     position: relative;
 
@@ -43,6 +42,7 @@ p {
 }
 
 .logo {
+    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -50,12 +50,13 @@ p {
     -webkit- transform: translateY(-50%) translateX(-50%);
 }
 
-.pc-mainvisual{
+.sp-mainvisual{
     display: none;
 }
 
+
 .logo img {
-    width: 480px;
+    width: 780px;
 }
 
 
