--- a/style.css
+++ b/style.css
@@ -285,10 +285,16 @@ p {
 h2 {
     font-family: 'ETopFont','JTopFont';
     font-size: 55px;
+   
     color: #c73c60;
     /*padding-top: 60px;*/
     margin-bottom: 30px;
     
+}
+
+span{
+    
+    font-size: 17px;
 }
 
 p {
