--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ p {
     /*margin-bottom: 32px;*/
     position: relative;
     /*padding-top: 80px;*/
-    padding-bottom: 60px;
+    /*padding-bottom: 60px;*/
     
 }
 
@@ -249,7 +249,7 @@ p {
     /*float: left;*/
    position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
     
