--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ p {
     position: relative;
     /*padding-top: 80px;*/
     /*padding-bottom: 60px;*/
-    padding: 60px 0px;
+   
     
 }
 
@@ -223,7 +223,7 @@ p {
 
 .right, .left {
     width: 90%;
-
+    margin: 60px 0px;
     box-sizing: border-box;
     padding: 30px;
     float: left;
