--- a/pc.css
+++ b/pc.css
@@ -312,7 +312,8 @@ p {
     width: 100%;
     /*height: 100vh;*/
     height: 600px;
-    background: #fff url(images/sp_detail.png) 0 0 no-repeat;
+    /*background: #fff url("images/pc_map.png") 0 0 no-repeat;*/
+    background-image: url("images/pc_map.png");
     background-size: cover;
 
     /*margin-bottom: 32px;*/
