--- a/pc.css
+++ b/pc.css
@@ -251,7 +251,7 @@ p {
     float: left;
    position: absolute;
     top: 50%;
-    left: 350px;;
+    left: 450px;
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
 }
